Fixed cropping issue on photo display

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,3 +25,21 @@
 .picture_title{
 	margin-left:40px;
 }
+
+.cropped_image{
+	width:366px;
+	height:200px;
+	overflow:hidden;
+	position:relative;
+}
+
+.cropped_image img{
+	width:366px;
+	height:100%;
+	position:absolute;
+	left: -100%;
+    right: -100%;
+    top: -100%;
+    bottom: -100%;
+    margin: auto; 
+}
